--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -13,6 +13,8 @@
   --global-theme-color: #{$purple-color};
   --global-hover-color: #{$purple-color};
   --global-hover-text-color: #{$white-color};
+  --global-theme-color-soft: #{rgba($purple-color, 0.12)};
+  --global-theme-shadow-color: #{rgba($purple-color, 0.35)};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
@@ -85,6 +87,8 @@ html[data-theme="dark"] {
   --global-theme-color: #25c279;
   --global-hover-color: #25c279;
   --global-hover-text-color: #{$white-color};
+  --global-theme-color-soft: #{rgba($green-color, 0.12)};
+  --global-theme-shadow-color: #{rgba($green-color, 0.35)};
   --global-footer-bg-color: #{$grey-color-light};
   --global-footer-text-color: #{$grey-color-dark};
   --global-footer-link-color: #{$black-color};
